Added another table row to test repo connection

--- a/index.html
+++ b/index.html
@@ -329,6 +329,11 @@
                         <td><input type="text" id="input2"></td>
                         <td><input type="text" id="input2"></td>
                     </tr>
+                    <tr>
+                        <td scope="row">What is the roundtrip distance traveled per day? (# of miles)</td>
+                        <td><input type="text" id="input2"></td>
+                        <td><input type="text" id="input2"></td>
+                    </tr>
                 </tbody>
             </table>
 
